made fixes to align the navbar and added tools section

--- a/src/components/Cardgrid.css
+++ b/src/components/Cardgrid.css
@@ -1,8 +1,8 @@
 .project-card{
-    background-color: rgb(31, 31, 31);
+    background-color: rgb(20, 20, 20);
 }
 .card-text{
-    color:white;
+    color:rgb(185, 185, 185);
 }
 .card-title{
     color:white;
